@@ -1,6 +1,6 @@
 
 /*
- * $Id: array.c,v 1.15 2007/03/16 19:57:56 mihajlov Exp $
+ * $Id: array.c,v 1.16 2007/05/31 12:16:59 sschuetz Exp $
  *
  * © Copyright IBM Corp. 2005, 2007
  *
@@ -349,6 +349,7 @@ CMPIArray *native_make_CMPIArray(CMPIData * av, CMPIStatus * rc,
    void *array =
        __new_empty_array(MEM_NOT_TRACKED, av->value.sint32, av->type, rc);
    int i, m;
+   CMPIValue value;
 
    for (i = 0, m = (int) av->value.sint32; i < m; i++)
       if (av[i + 1].state != CMPI_nullValue) {
@@ -362,13 +363,17 @@ CMPIArray *native_make_CMPIArray(CMPIData * av, CMPIStatus * rc,
 	      value.ref = getObjectPath(chars,&msg);	      
 	      arraySetElementNotTrackedAt((CMPIArray *) array, i, &value, CMPI_ref);
 	  } else if (av[i + 1].type == CMPI_instance) {
-	      CMPIValue value;
               value.inst = (void *)ClObjectGetClObject(hdr, (ClString *) & av[i + 1].value.inst);
               if(value.inst) {
               	 relocateSerializedInstance(value.inst);
               }
               arraySetElementNotTrackedAt((CMPIArray *) array, i, &value, CMPI_instance);
-	  } else {
+	  } else if (av[i + 1].type == CMPI_dateTime) {
+          const char *str =
+          ClObjectGetClString(hdr, (ClString *) & av[i + 1].value.chars);
+          value.dateTime = sfcb_native_new_CMPIDateTime_fromChars(str, NULL);
+          arraySetElementNotTrackedAt((CMPIArray *) array, i, &value, CMPI_dateTime);
+      } else {
 	      arraySetElementNotTrackedAt((CMPIArray *) array, i, &av[i + 1].value,
 					  av[i + 1].type);
 	  }
